change inv for solving

--- a/python/example_notebooks/car_track.ipynb
+++ b/python/example_notebooks/car_track.ipynb
@@ -39,12 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import linalg"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,8 +258,10 @@
     "        P = A @ P @ A.T + Q\n",
     "        \n",
     "        S = H @ P @ H.T + R\n",
-    "        K = P @ H.T @ np.linalg.inv(S)\n",
-    "        m = m + K @ ( observation - H @ m)\n",
+    "        K = linalg.solve(S.T, H @ P.T, assume_a=\"pos\").T \n",
+    "        # More efficient and stable way of computing K = P @ H.T @ linalg.inv(S)\n",
+    "        \n",
+    "        m = m + K @ (observation - H @ m)\n",
     "        P = P - K @ S @ K.T\n",
     "        \n",
     "        kf_m[i] = m\n",
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +310,7 @@
      "output_type": "stream",
      "text": [
       "RAW RMSE: 0.7890852658072309\n",
-      "KF RMSE: 0.46144569928207296\n"
+      "KF RMSE: 0.461445699282073\n"
      ]
     }
    ],
@@ -327,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +352,9 @@
     "        \n",
     "        mp = A @ filtered_m\n",
     "        Pp = A @ filtered_P @ A.T + Q\n",
-    "        Ck = filtered_P @ A.T @ np.linalg.inv(Pp)\n",
+    "        Ck = linalg.solve(Pp, A @ filtered_P.T, assume_a=\"pos\").T \n",
+    "        # More efficient and stable way of computing Ck = filtered_P @ A.T @ linalg.inv(Pp)\n",
+    "\n",
     "        m = filtered_m + Ck @ (m - mp)\n",
     "        P = filtered_P + Ck @ (P - Pp) @ Ck.T\n",
     "        \n",
@@ -361,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RTS RMSE: 0.2573283956961498\n"
+      "RTS RMSE: 0.25732839569614935\n"
      ]
     }
    ],
@@ -407,13 +412,6 @@
     "rmse_rts = rmse(states[:, :2], rts_m[:, :2])\n",
     "print(f\"RTS RMSE: {rmse_rts}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
