--- a/python/example_notebooks/car_track.ipynb
+++ b/python/example_notebooks/car_track.ipynb
@@ -260,6 +260,7 @@
     "        S = H @ P @ H.T + R\n",
     "        K = linalg.solve(S.T, H @ P.T, assume_a=\"pos\").T \n",
     "        # More efficient and stable way of computing K = P @ H.T @ linalg.inv(S)\n",
+    "        # This also leverages the fact that S is known to be a positive definite matrix (assume_a=\"pos\")\n",
     "        \n",
     "        m = m + K @ (observation - H @ m)\n",
     "        P = P - K @ S @ K.T\n",
@@ -354,6 +355,7 @@
     "        Pp = A @ filtered_P @ A.T + Q\n",
     "        Ck = linalg.solve(Pp, A @ filtered_P.T, assume_a=\"pos\").T \n",
     "        # More efficient and stable way of computing Ck = filtered_P @ A.T @ linalg.inv(Pp)\n",
+    "        # This also leverages the fact that Pp is known to be a positive definite matrix (assume_a=\"pos\")\n",
     "\n",
     "        m = filtered_m + Ck @ (m - mp)\n",
     "        P = filtered_P + Ck @ (P - Pp) @ Ck.T\n",
