Change intanciation of parameters

--- a/python/example_notebooks/car_track.ipynb
+++ b/python/example_notebooks/car_track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,64 +128,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.eye(M) + dt * np.eye(M, k=2) \n",
-    "# A = [[1, 0, dt, 0],\n",
-    "#      [0, 1, 0, dt],\n",
-    "#      [0, 0, 1, 0],\n",
-    "#      [0, 0, 0, 1]]"
+    "A = np.array([[1, 0, dt, 0],\n",
+    "              [0, 1, 0, dt],\n",
+    "              [0, 0, 1, 0],\n",
+    "              [0, 0, 0, 1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Q_11 = np.eye(M // 2) * dt ** 3 / 3 \n",
-    "Q_12 = np.eye(M // 2) * dt ** 2 / 2 \n",
-    "Q_22 = np.eye(M // 2) * dt \n",
-    "Q = q * np.block([[Q_11, Q_12], \n",
-    "                  [Q_12, Q_22]])\n",
-    "# Q = q * [[dt^3/3, 0, dt^2/2, 0],\n",
-    "#          [0, dt^3/3, 0, dt^2/2],\n",
-    "#          [dt^2/2, 0, dt, 0],\n",
-    "#          [0, dt^2/2, 0, dt]]"
+    "Q = q * np.array([[dt ** 3 / 3, 0, dt ** 2 / 2, 0],\n",
+    "                  [0, dt **3 / 3, 0, dt ** 2 / 2],\n",
+    "                  [dt ** 2 / 2, 0, dt, 0],\n",
+    "                  [0, dt ** 2 / 2, 0, dt]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = np.eye(N, M)\n",
-    "# H = [[1, 0, 0, 0],\n",
-    "#      [0, 1, 0, 0]]"
+    "H = np.array([[1, 0, 0, 0],\n",
+    "              [0, 1, 0, 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = np.eye(2) * s ** 2\n",
-    "# R = [[s^2, 0],\n",
-    "#      [0, s^2]]"
+    "R = np.array([[s ** 2, 0],\n",
+    "              [0, s ** 2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "m_0 = np.array([0., 0., 1., -1.])\n",
-    "P_0 = np.eye(M)"
+    "P_0 = np.array([[1, 0, 0, 0],\n",
+    "                [0, 1, 0, 0],\n",
+    "                [0, 0, 1, 0],\n",
+    "                [0, 0, 0, 1]])"
    ]
   },
   {
@@ -197,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +409,13 @@
     "rmse_rts = rmse(states[:, :2], rts_m[:, :2])\n",
     "print(f\"RTS RMSE: {rmse_rts}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
