Add pendulum pf example

--- a/python/example_notebooks/car_track.ipynb
+++ b/python/example_notebooks/car_track.ipynb
@@ -90,7 +90,7 @@
     "    ax.scatter(y[:, 0], y[:, 1], marker=\"o\", label=\"Measurements\", color=\"red\")\n",
     "    ax.plot(x1[:, 0], x1[:, 1], label=label1, color=\"blue\")\n",
     "    if x2 is None:\n",
-    "        ax.scatter(x1[0, 0], x1[0, 1], marker=\"*\", color=\"orange\", s=500)\n",
+    "        ax.scatter(x1[0, 0], x1[0, 1], marker=\"x\", color=\"orange\", s=500)\n",
     "    else:\n",
     "        ax.plot(x2[:, 0], x2[:, 1], label=label2, color=\"orange\")\n",
     "    _ = ax.legend()\n",
@@ -176,11 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_0 = np.array([0., 0., 1., -1.])\n",
-    "P_0 = np.array([[1, 0, 0, 0],\n",
-    "                [0, 1, 0, 0],\n",
-    "                [0, 0, 1, 0],\n",
-    "                [0, 0, 0, 1]])"
+    "x_0 = np.array([0., 0., 1., -1.])"
    ]
   },
   {
@@ -199,7 +195,7 @@
     "random_state = RandomState(33)\n",
     "steps = 100\n",
     "\n",
-    "states, observations = generate_ssm(m_0, A, Q, H, R, steps, random_state)"
+    "states, observations = generate_ssm(x_0, A, Q, H, R, steps, random_state)"
    ]
   },
   {
@@ -229,6 +225,19 @@
    "metadata": {},
    "source": [
     "## Kalman Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_0 = x_0\n",
+    "P_0 = np.array([[1, 0, 0, 0],\n",
+    "                [0, 1, 0, 0],\n",
+    "                [0, 0, 1, 0],\n",
+    "                [0, 0, 0, 1]])"
    ]
   },
   {
