Updated comments and moved plotting functions to utilities

--- a/python/example_notebooks/car_track.ipynb
+++ b/python/example_notebooks/car_track.ipynb
@@ -69,33 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "from python.common_utilities import generate_ssm, RandomState, rmse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(y, x1, label1, x2=None, label2=None):\n",
-    "    fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "    ax.scatter(y[:, 0], y[:, 1], marker=\"o\", label=\"Measurements\", color=\"red\")\n",
-    "    ax.plot(x1[:, 0], x1[:, 1], label=label1, color=\"blue\")\n",
-    "    if x2 is None:\n",
-    "        ax.scatter(x1[0, 0], x1[0, 1], marker=\"x\", color=\"orange\", s=500)\n",
-    "    else:\n",
-    "        ax.plot(x2[:, 0], x2[:, 1], label=label2, color=\"orange\")\n",
-    "    _ = ax.legend()\n",
-    "    _ = ax.set_xlabel(\"${\\it x}_1$\")\n",
-    "    _ = ax.set_ylabel(\"${\\it y}_1$\")"
+    "from python.common_utilities import generate_ssm, RandomState, rmse, plot_car_trajectory"
    ]
   },
   {
@@ -217,7 +191,7 @@
     }
    ],
    "source": [
-    "plot(observations, states, \"Trajectory\")"
+    "plot_car_trajectory(observations, states, \"Trajectory\")"
    ]
   },
   {
@@ -302,7 +276,7 @@
     }
    ],
    "source": [
-    "plot(observations, states, \"Trajectory\", kf_m, \"Filter Estimate\")"
+    "plot_car_trajectory(observations, states, \"Trajectory\", kf_m, \"Filter Estimate\")"
    ]
   },
   {
@@ -398,7 +372,7 @@
     }
    ],
    "source": [
-    "plot(observations, states, \"Trajectory\", rts_m, \"Smoother Estimate\")"
+    "plot_car_trajectory(observations, states, \"Trajectory\", rts_m, \"Smoother Estimate\")"
    ]
   },
   {
