--- a/python/example_notebooks/pendulum_pf_cluttered.ipynb
+++ b/python/example_notebooks/pendulum_pf_cluttered.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Noisy Cluttered Pendulum - Particle Filter Example\n",
     "\n",
-    "Estimate pendulum state with Particle Filter and Backward-simulation Particle Smoother as in Examples 7.1 and 11.1 of the book Bayesian Filtering and Smoothing\n"
+    "Estimate cluttered pendulum state with Particle Filter and Backward-simulation Particle Smoother as in Examples 7.2 and 11.2 of the book Bayesian Filtering and Smoothing\n"
    ]
   },
   {
@@ -70,43 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "from python.common_utilities import generate_pendulum, RandomState, rmse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(timeline, y, x1, label1, x2=None, label2=None):\n",
-    "    fig, axes = plt.subplots(ncols=2, figsize=(22, 10))\n",
-    "    axes[1].scatter(timeline, y, marker=\"o\", label=\"Measurements\", color=\"red\", alpha=0.66)\n",
-    "    axes[1].plot(timeline, np.sin(x1[:, 0]), linestyle=\"dashdot\", label=label1, color=\"blue\")\n",
-    "                    \n",
-    "    axes[0].plot(x1[:, 0], x1[:, 1], label=label1, color=\"blue\")\n",
-    "    \n",
-    "    if x2 is not None:\n",
-    "        axes[1].plot(timeline, np.sin(x2[:, 0]), linestyle=\"dashdot\", label=label2, color=\"orange\")\n",
-    "        axes[0].plot(x2[:, 0], x2[:, 1], label=label2, color=\"orange\")\n",
-    "    else:\n",
-    "        axes[0].scatter(x1[0, 0], x1[0, 1], marker=\"x\", color=\"orange\", s=500)\n",
-    "        \n",
-    "    axes[0].set_xlabel(\"$x_0(t)$\")\n",
-    "    axes[0].set_ylabel(\"$x_1(t)$\")\n",
-    "    \n",
-    "    axes[1].set_xlabel(\"$t$\")\n",
-    "    axes[1].set_ylabel(\"$\\sin(x_0(t))$\")\n",
-    "    \n",
-    "    axes[0].legend()\n",
-    "    axes[1].legend()\n"
+    "from python.common_utilities import generate_pendulum, RandomState, rmse, plot_pendulum"
    ]
   },
   {
@@ -125,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +164,7 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\")"
    ]
   },
   {
@@ -212,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,6 +230,9 @@
     "    sqrt_R = np.sqrt(R)\n",
     "    state = m_0.reshape(2, 1) + np.matmul(chol_P0, random_state.randn(2, n_particles))\n",
     "    w = np.full(n_particles, 1/n_particles)\n",
+    "    sqrt_R = np.sqrt(R)\n",
+    "    \n",
+    "    observation_dist = stats.norm(loc=0., scale=sqrt_R)\n",
     "\n",
     "    for i in range(steps):\n",
     "        # Propagate through the dynamic model: cross-term update\n",
@@ -279,7 +246,7 @@
     "        \n",
     "        clutter_ind = random_state.rand(n_particles) < cluttered_probability\n",
     "        \n",
-    "        w[~clutter_ind] = np.exp(-0.5 * (obs - np.sin(state[0, ~clutter_ind])) ** 2 / R) / np.sqrt(2 * np.pi * R)\n",
+    "        w[~clutter_ind] = observation_dist.pdf(obs - np.sin(state[0, ~clutter_ind]))\n",
     "        w[clutter_ind] = 0.25\n",
     "        \n",
     "        # Normalize them\n",
@@ -295,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -331,12 +298,12 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", pf_m, \"Filter Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", pf_m, \"Filter Estimate\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 499/499 [00:26<00:00, 19.10it/s]\n"
+      "100%|██████████| 499/499 [00:25<00:00, 19.35it/s]\n"
      ]
     }
    ],
@@ -410,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -436,12 +403,12 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", pf_bs_m, \"Smoother Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", pf_bs_m, \"Smoother Estimate\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
