--- a/python/example_notebooks/pendulum_ckf.ipynb
+++ b/python/example_notebooks/pendulum_ckf.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Noisy Pendulum - Curbature Kalman Filter Example\n",
     "\n",
-    "Estimate pendulum state with Particle Filter and Backward-simulation Particle Smoother as in Examples 7.1 and 11.1 of the book Bayesian Filtering and Smoothing\n"
+    "Estimate pendulum state with CKF and CRTS as in Examples 6.2 and 10.2 of the book Bayesian Filtering and Smoothing\n"
    ]
   },
   {
@@ -70,43 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "from python.common_utilities import generate_pendulum, RandomState, rmse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(timeline, y, x1, label1, x2=None, label2=None):\n",
-    "    fig, axes = plt.subplots(ncols=2, figsize=(22, 10))\n",
-    "    axes[1].scatter(timeline, y, marker=\"o\", label=\"Measurements\", color=\"red\", alpha=0.66)\n",
-    "    axes[1].plot(timeline, np.sin(x1[:, 0]), linestyle=\"dashdot\", label=label1, color=\"blue\")\n",
-    "                    \n",
-    "    axes[0].plot(x1[:, 0], x1[:, 1], label=label1, color=\"blue\")\n",
-    "    \n",
-    "    if x2 is not None:\n",
-    "        axes[1].plot(timeline, np.sin(x2[:, 0]), linestyle=\"dashdot\", label=label2, color=\"orange\")\n",
-    "        axes[0].plot(x2[:, 0], x2[:, 1], label=label2, color=\"orange\")\n",
-    "    else:\n",
-    "        axes[0].scatter(x1[0, 0], x1[0, 1], marker=\"x\", color=\"orange\", s=500)\n",
-    "        \n",
-    "    axes[0].set_xlabel(\"$x_0(t)$\")\n",
-    "    axes[0].set_ylabel(\"$x_1(t)$\")\n",
-    "    \n",
-    "    axes[1].set_xlabel(\"$t$\")\n",
-    "    axes[1].set_ylabel(\"$\\sin(x_0(t))$\")\n",
-    "    \n",
-    "    axes[0].legend()\n",
-    "    axes[1].legend()\n"
+    "from python.common_utilities import generate_pendulum, RandomState, rmse, plot_pendulum"
    ]
   },
   {
@@ -191,7 +155,7 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\")"
    ]
   },
   {
@@ -312,7 +276,7 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", ckf_m, \"CKF Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", ckf_m, \"CKF Estimate\")"
    ]
   },
   {
@@ -419,7 +383,7 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", rts_m, \"Curbature Smoother Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", rts_m, \"Curbature Smoother Estimate\")"
    ]
   },
   {
