--- a/python/example_notebooks/pendulum_pf.ipynb
+++ b/python/example_notebooks/pendulum_pf.ipynb
@@ -70,43 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "from python.common_utilities import generate_pendulum, RandomState, rmse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot(timeline, y, x1, label1, x2=None, label2=None):\n",
-    "    fig, axes = plt.subplots(ncols=2, figsize=(22, 10))\n",
-    "    axes[1].scatter(timeline, y, marker=\"o\", label=\"Measurements\", color=\"red\", alpha=0.66)\n",
-    "    axes[1].plot(timeline, np.sin(x1[:, 0]), linestyle=\"dashdot\", label=label1, color=\"blue\")\n",
-    "                    \n",
-    "    axes[0].plot(x1[:, 0], x1[:, 1], label=label1, color=\"blue\")\n",
-    "    \n",
-    "    if x2 is not None:\n",
-    "        axes[1].plot(timeline, np.sin(x2[:, 0]), linestyle=\"dashdot\", label=label2, color=\"orange\")\n",
-    "        axes[0].plot(x2[:, 0], x2[:, 1], label=label2, color=\"orange\")\n",
-    "    else:\n",
-    "        axes[0].scatter(x1[0, 0], x1[0, 1], marker=\"x\", color=\"orange\", s=500)\n",
-    "        \n",
-    "    axes[0].set_xlabel(\"$x_0(t)$\")\n",
-    "    axes[0].set_ylabel(\"$x_1(t)$\")\n",
-    "    \n",
-    "    axes[1].set_xlabel(\"$t$\")\n",
-    "    axes[1].set_ylabel(\"$\\sin(x_0(t))$\")\n",
-    "    \n",
-    "    axes[0].legend()\n",
-    "    axes[1].legend()\n"
+    "from python.common_utilities import generate_pendulum, RandomState, rmse, plot_pendulum"
    ]
   },
   {
@@ -125,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +155,7 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\")"
    ]
   },
   {
@@ -203,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -322,12 +286,12 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", pf_m, \"Filter Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", pf_m, \"Filter Estimate\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 499/499 [00:04<00:00, 114.94it/s]\n"
+      "100%|██████████| 499/499 [00:04<00:00, 113.75it/s]\n"
      ]
     }
    ],
@@ -402,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -428,12 +392,12 @@
     }
    ],
    "source": [
-    "plot(timeline, observations, states, \"Trajectory\", pf_bs_m, \"Smoother Estimate\")"
+    "plot_pendulum(timeline, observations, states, \"Trajectory\", pf_bs_m, \"Smoother Estimate\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
