--- a/python/exercises/KalmanFilterExercise.ipynb
+++ b/python/exercises/KalmanFilterExercise.ipynb
@@ -228,7 +228,7 @@
     "    A = np.array([[np.cos(w), np.sin(w) / w], \n",
     "                  [-w * np.sin(w), np.cos(w)]])\n",
     "    \n",
-    "    C = np.array([1, 0])\n",
+    "    C = np.array([[1., 0.]])\n",
     "    \n",
     "    observations = np.empty(T)\n",
     "    true_states = np.empty((T, 2))\n",
