--- a/python/exercises/Exercise7_2.ipynb
+++ b/python/exercises/Exercise7_2.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Angle Exercise\n",
-    "This is the supplementary Python code for the Exercise 7.2 in \"\"Simo Särkkä and Lennart Svensson (2023), Bayesian Filtering and Smoothing, 2nd ed. Cambridge University Press\". <br>\n",
+    "# Angle Exercise 7.2\n",
+    "This is the supplementary Python code for the Exercise 7.2 in \"Simo Särkkä and Lennart Svensson (2023), Bayesian Filtering and Smoothing, 2nd ed. Cambridge University Press\". <br>\n",
     "The exercise consists in completing the function:\n",
-    "- `ekf_update`\n",
+    "- `ekf_predict_update`\n",
     "\n",
     "```python\n",
     "\n",
-    "def ekf_update(x, cov, obs): \n",
+    "def ekf_predict_update(x, cov, obs): \n",
     "    \"\"\" Update the state belief based on prior belief and new observation\n",
     "    \"\"\"\n",
     "    # Do something\n",
@@ -556,8 +556,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ekf_update(x, cov, theta):\n",
-    "    \"\"\" Implements the kalman equations as given in \"Simo Sarkka (2013), Bayesian Filtering and Smoothing\", Ch.5.\n",
+    "def ekf_predict_update(x, cov, theta):\n",
+    "    \"\"\" Implements the kalman equations as given in \"Simo Särkkä and Lennart Svensson (2023), Bayesian Filtering and Smoothing, 2nd ed. Cambridge University Press\", Ch.7.\n",
     "    Uses the global variables A, Q, sigma, sensors\n",
     "    \"\"\"\n",
     "    # You should replace the below equations\n",
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ekf_states, ekf_covariances = filter_routine(initial_state, initial_covariance, ekf_update, thetas)"
+    "ekf_states, ekf_covariances = filter_routine(initial_state, initial_covariance, ekf_predict_update, thetas)"
    ]
   },
   {
