--- a/python/example_notebooks/pendulum_ekf.ipynb
+++ b/python/example_notebooks/pendulum_ekf.ipynb
@@ -64,6 +64,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -260,7 +261,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EKF RMSE: 0.10306106181239291\n"
+      "EKF RMSE: 0.10306106181239288\n"
      ]
     }
    ],
@@ -356,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERTS RMSE: 0.027612762479910007\n"
+      "ERTS RMSE: 0.027612762479911564\n"
      ]
     }
    ],
